Massive updates to the build config

--- a/build_config.json
+++ b/build_config.json
@@ -1,14 +1,26 @@
 {
 
 	"builds": {
-		"knot-resolver-1.3.1":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.3.1.tar.xz",
+		"knot-resolver-3.1.0":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-3.1.0.tar.xz",
 			"make_str": "!knotresmake",
 			"start": "!knotstart"
 			},
 
-		"knot-resolver-1.3.0":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.3.0.tar.xz",
+		"knot-resolver-2.4.1":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-2.4.1.tar.xz",
+			"make_str": "!knotresmake",
+			"start": "!knotstart"
+			},
+
+		"knot-resolver-1.5.3":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.5.3.tar.xz",
+			"make_str": "!knotresmake",
+			"start": "!knotstart"
+			},
+
+		"knot-resolver-1.3.3":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.3.3.tar.xz",
 			"make_str": "!knotresmake",
 			"start": "!knotstart"
 			},
@@ -19,200 +31,50 @@
 			"start": "!knotstart"
 			},
 
-		"knot-resolver-1.2.5":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.5.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"knot-resolver-1.2.4":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.4.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"knot-resolver-1.2.3":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.3.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"knot-resolver-1.2.2":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.2.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"knot-resolver-1.2.1":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.1.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"knot-resolver-1.2.0":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.0.tar.xz",
-			"make_str": "!knotresmake",
-			"start": "!knotstart"
-			},
-
-		"bind-9.11.2":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.11.2/bind-9.11.2.tar.gz",
+		"bind-9.13.4":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.13.4/bind-9.13.4.tar.gz",
 			"make_str": "!bind9make",
 			"start": "!bind9start"
 			},
 
-		"bind-9.11.1":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.11.1/bind-9.11.1.tar.gz",
+		"bind-9.12.3":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.12.3/bind-9.12.3.tar.gz",
 			"make_str": "!bind9make",
 			"start": "!bind9start"
 			},
 
-		"bind-9.11.0":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.11.0/bind-9.11.0.tar.gz",
+		"bind-9.11.5":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.11.5/bind-9.11.5.tar.gz",
 			"make_str": "!bind9make",
 			"start": "!bind9start"
 			},
 
-		"bind-9.10.6":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.10.6/bind-9.10.6.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.10.5":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.10.5/bind-9.10.5.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.10.3":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.10.3/bind-9.10.3.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.10.0":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.10.0/bind-9.10.0.tar.gz",
+		"bind-9.10.8":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.10.8/bind-9.10.8.tar.gz",
 			"make_str": "!bind9make",
 			"start": "!bind9start"
 			},
 
 		"bind-9.9.11":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.9.11/bind-9.9.11.tar.gz",
+			{ "url": "https://ftp.isc.org/isc/bind9/9.9.11/bind-9.9.11.tar.gz",
 			"make_str": "!bind9make",
 			"start": "!bind9start"
 			},
 
-		"bind-9.9.10":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.9.10/bind-9.9.10.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.9.5":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.9.5/bind-9.9.5.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.9.0":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.9.0/bind-9.9.0.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.8.8":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.8.8/bind-9.8.8.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.8.4":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.8.4/bind-9.8.4.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.8.0":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.8.0/bind-9.8.0.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.7.7":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.7.7/bind-9.7.7.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.7.4":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.7.4/bind-9.7.4.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.6-ESV-R11":
-			{ "url": "https://ftp.isc.org/isc/bind9/9.6-ESV-R11/bind-9.6-ESV-R11.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.6.3":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.6.3/bind-9.6.3.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.5.2":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.5.2/bind-9.5.2.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.4.3":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.4.3/bind-9.4.3.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.3.6":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.3.6/bind-9.3.6.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"bind-9.2.9":
-			{ "url": "ftp://ftp.isc.org//isc/bind9/9.2.9/bind-9.2.9.tar.gz",
-			"make_str": "!bind9make",
-			"start": "!bind9start"
-			},
-
-		"unbound-1.6.4":
-			{ "url": "http://unbound.net/downloads/unbound-1.6.4.tar.gz",
+		"unbound-1.8.3":
+			{ "url": "http://unbound.net/downloads/unbound-1.8.3.tar.gz",
 			"make_str": "!unboundmake",
 			"start": "!unboundstart"
 			},
 
-		"unbound-1.6.3":
-			{ "url": "http://unbound.net/downloads/unbound-1.6.3.tar.gz",
+		"unbound-1.7.3":
+			{ "url": "http://unbound.net/downloads/unbound-1.7.3.tar.gz",
 			"make_str": "!unboundmake",
 			"start": "!unboundstart"
 			},
 
-		"unbound-1.6.2":
-			{ "url": "http://unbound.net/downloads/unbound-1.6.2.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
-		"unbound-1.6.1":
-			{ "url": "http://unbound.net/downloads/unbound-1.6.1.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
-		"unbound-1.6.0":
-			{ "url": "http://unbound.net/downloads/unbound-1.6.0.tar.gz",
+		"unbound-1.6.8":
+			{ "url": "http://unbound.net/downloads/unbound-1.6.8.tar.gz",
 			"make_str": "!unboundmake",
 			"start": "!unboundstart"
 			},
@@ -223,32 +85,8 @@
 			"start": "!unboundstart"
 			},
 
-		"unbound-1.5.9":
-			{ "url": "http://unbound.net/downloads/unbound-1.5.9.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
-		"unbound-1.5.8":
-			{ "url": "http://unbound.net/downloads/unbound-1.5.8.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
 		"unbound-1.4.22":
 			{ "url": "http://unbound.net/downloads/unbound-1.4.22.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
-		"unbound-1.4.21":
-			{ "url": "http://unbound.net/downloads/unbound-1.4.21.tar.gz",
-			"make_str": "!unboundmake",
-			"start": "!unboundstart"
-			},
-
-		"unbound-1.4.20":
-			{ "url": "http://unbound.net/downloads/unbound-1.4.20.tar.gz",
 			"make_str": "!unboundmake",
 			"start": "!unboundstart"
 			},
@@ -259,44 +97,14 @@
 			"start": "!unboundstart"
 			},
 
-		"pdns-recursor-4.0.6":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.6.tar.bz2",
+		"pdns-recursor-4.1.8":
+			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.1.8.tar.bz2",
 			"make_str": "!pdns4make",
 			"start": "!pdns4start"
 			},
 
-		"pdns-recursor-4.0.5":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.5.tar.bz2",
-			"make_str": "!pdns4make",
-			"start": "!pdns4start"
-			},
-
-		"pdns-recursor-4.0.4":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.4.tar.bz2",
-			"make_str": "!pdns4make",
-			"start": "!pdns4start"
-			},
-
-		"pdns-recursor-4.0.3":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.3.tar.bz2",
-			"make_str": "!pdns4make",
-			"start": "!pdns4start"
-			},
-
-		"pdns-recursor-4.0.2":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.2.tar.bz2",
-			"make_str": "!pdns4make",
-			"start": "!pdns4start"
-			},
-
-		"pdns-recursor-4.0.1":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.1.tar.bz2",
-			"make_str": "!pdns4make",
-			"start": "!pdns4start"
-			},
-
-		"pdns-recursor-4.0.0":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.0.tar.bz2",
+		"pdns-recursor-4.0.9":
+			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.9.tar.bz2",
 			"make_str": "!pdns4make",
 			"start": "!pdns4start"
 			},
@@ -307,91 +115,19 @@
 			"start": "!pdns3start"
 			},
 
-		"pdns-recursor-3.7.3":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.7.3.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.7.2":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.7.2.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.7.1":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.7.1.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
 		"pdns-recursor-3.6.4":
 			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.6.4.tar.bz2",
 			"make_str": "!pdns3make",
 			"start": "!pdns3start"
 			},
 
-		"pdns-recursor-3.6.3":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.6.3.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.6.2":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.6.2.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.6.1":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.6.1.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.6.0":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.6.0.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.5.3":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.5.3.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.5.2":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.5.2.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.5.1":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.5.1.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.5":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.5.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.3":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.3.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
-			},
-
-		"pdns-recursor-3.2":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.2.tar.bz2",
-			"make_str": "!pdns3make",
-			"start": "!pdns3start"
+		"bind-for-auth":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.12.3/bind-9.12.3.tar.gz",
+			"make_str": "!bind9make",
+			"start": "!bind9start"
 			}
 
-},
+	},
 
 	"templates": {
 		"!bind9make": "./configure --prefix=PREFIX_GOES_HERE && make && make install",
@@ -411,11 +147,12 @@
 	},
 
 	"bases": {
-		"common": ["LC_ALL=C.UTF-8 add-apt-repository -y ppa:cz.nic-labs/knot-dns && LC_ALL=C.UTF-8 add-apt-repository -y ppa:cz.nic-labs/knot-resolver",
+		"full-base": ["LC_ALL=C.UTF-8 add-apt-repository -y ppa:cz.nic-labs/knot-dns && LC_ALL=C.UTF-8 add-apt-repository -y ppa:cz.nic-labs/knot-resolver",
 			"apt update",
 			"apt install -y libknot-dev",
 			"apt install -y libssl-dev pkg-config libuv1-dev libcmocka-dev libluajit-5.1-dev liblua5.1-0-dev autoconf libtool liburcu-dev libgnutls28-dev libedit-dev",
-			"apt install -y libldns-dev libexpat-dev libboost-dev" ]
-	},
+			"apt install -y libldns-dev libexpat-dev libboost-dev" ],
+		"bind-for-auth-base": [ "apt install -y libssl-dev" ]
+	}
 	
 }
