--- a/config-files/root-zone-basic/named.conf
+++ b/config-files/root-zone-basic/named.conf
@@ -1,4 +1,5 @@
 options {
+directory "SOME_DIRECTORY_GOES_HERE";
 recursion no;
 empty-zones-enable no;
 listen-on {172.21.97.1; 172.21.98.1; 172.21.99.1; 172.21.100.1; 172.21.101.1; 172.21.102.1; 172.21.103.1; 172.21.104.1; 172.21.105.1; 172.21.106.1; 172.21.107.1; 172.21.108.1; 172.21.109.1; 127.0.0.1;};
