New root-zone-basic with TTLs of 60 for SOA and RRSIGs

--- a/config-files/testbed-basic.conf
+++ b/config-files/testbed-basic.conf
@@ -7,6 +7,8 @@ ksk-type = rsa2048
 zsk-number = 1
 zsk-type = rsa2048
 
+ttl-for-soa = 60
+
 bin-prefix = /usr/local/sbin
 
-directory = root-zone-basic
+directory = ../Local/root-zone-basic
