--- a/build_config.json
+++ b/build_config.json
@@ -1,12 +1,6 @@
 {
 
 	"builds": {
-		"knot-resolver-3.2.1":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-3.2.1.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
-
-		"knot-resolver-2.4.1":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-2.4.1.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
-
 		"knot-resolver-1.5.3":
 			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.5.3.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
 
@@ -16,8 +10,8 @@
 		"knot-resolver-1.2.6":
 			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-1.2.6.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
 
-		"bind-9.13.5":
-			{ "url": "https://ftp.isc.org/isc/bind9/9.13.5/bind-9.13.5.tar.gz", "make_str": "!bind9make", "start": "!bind9start" },
+		"bind-9.13.6":
+			{ "url": "https://ftp.isc.org/isc/bind9/9.13.6/bind-9.13.6.tar.gz", "make_str": "!bind9make", "start": "!bind9start" },
 
 		"bind-9.12.3":
 			{ "url": "https://ftp.isc.org/isc/bind9/9.12.3/bind-9.12.3.tar.gz", "make_str": "!bind9make", "start": "!bind9start" },
@@ -31,6 +25,9 @@
 		"bind-9.9.11":
 			{ "url": "https://ftp.isc.org/isc/bind9/9.9.11/bind-9.9.11.tar.gz", "make_str": "!bind9make", "start": "!bind9start" },
 
+		"unbound-1.9.0":
+			{ "url": "http://unbound.net/downloads/unbound-1.9.0.tar.gz", "make_str": "!unboundmake", "start": "!unboundstart" },
+
 		"unbound-1.8.3":
 			{ "url": "http://unbound.net/downloads/unbound-1.8.3.tar.gz", "make_str": "!unboundmake", "start": "!unboundstart" },
 
@@ -43,9 +40,6 @@
 		"unbound-1.5.10":
 			{ "url": "http://unbound.net/downloads/unbound-1.5.10.tar.gz", "make_str": "!unboundmake", "start": "!unboundstart" },
 
-		"pdns-recursor-4.1.9":
-			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.1.9.tar.bz2", "make_str": "!pdns4make", "start": "!pdns4start" },
-
 		"pdns-recursor-4.0.9":
 			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.0.9.tar.bz2", "make_str": "!pdns4make", "start": "!pdns4start" },
 
@@ -53,6 +47,18 @@
 			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-3.7.4.tar.bz2", "make_str": "!pdns3make", "start": "!pdns3start" }
 
 	},
+	
+	"not currently building": {
+		"knot-resolver-3.2.1":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-3.2.1.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
+
+		"knot-resolver-2.4.1":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-2.4.1.tar.xz", "make_str": "!knotresmake", "start": "!knotstart" },
+
+		"pdns-recursor-4.1.9":
+			{ "url": "https://downloads.powerdns.com/releases/pdns-recursor-4.1.9.tar.bz2", "make_str": "!pdns4make", "start": "!pdns4start" }
+			
+		},
 
 	"templates": {
 		"!bind9make": "./configure --prefix=PREFIX_GOES_HERE && make && make install",
