--- a/config-files/root-zone-basic/named.conf
+++ b/config-files/root-zone-basic/named.conf
@@ -1,4 +1,5 @@
 options {
+directory "/root/bind-configs";
 recursion no;
 empty-zones-enable no;
 listen-on {172.21.101.1; 172.21.102.1; 172.21.103.1; 172.21.104.1; 172.21.105.1; 172.21.106.1; 172.21.107.1; 172.21.108.1; 172.21.109.1; 172.21.109.10; 172.21.109.11; 172.21.109.12; 172.21.109.13; 127.0.0.1;};
