Lots of changes for new FreeBSD server

--- a/config-files/servers-rc.conf
+++ b/config-files/servers-rc.conf
@@ -1,4 +1,4 @@
-hostname="freebsd12-base"
+hostname="servers-vm.proper.com"
 ifconfig_em0="inet 192.168.56.40/24"
 ifconfig_em1="inet 172.21.1.2/12"
 ifconfig_em1_alias0="inet 172.21.101.1/12"
