Second attempt at kresd.conf

--- a/config-files/test1/kresd.conf
+++ b/config-files/test1/kresd.conf
@@ -1,4 +1,4 @@
 net.listen('127.0.0.1')
 modules.load('hints')
-hints.config({file = '/root/resolver-testbed-master/config-files/root-zone-basic/root.hints'})
+hints.root_file('/root/resolver-testbed-master/config-files/root-zone-basic/root.hints')
 trust_anchors.add_file('/root/resolver-testbed-master/config-files/root-zone-basic/trust-anchor-ds', true)
