--- a/build_config.json
+++ b/build_config.json
@@ -19,9 +19,6 @@
 		"bind-9.9.11":
 			{ "url": "https://ftp.isc.org/isc/bind9/9.9.11/bind-9.9.11.tar.gz", "make_str": "!bind9make", "start": "!bind9start" },
 		
-		"knot-resolver-4.0.0":
-			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-4.0.0.tar.xz", "make_str": "!knotmake", "start": "!knotstart" },
-
 		"unbound-1.9.1":
 			{ "url": "http://unbound.net/downloads/unbound-1.9.1.tar.gz", "make_str": "!unboundmake", "start": "!unboundstart" },
 
@@ -49,17 +46,23 @@
 	},
 	
 	"templates": {
-		"!bind9make": "./configure --prefix=PREFIX_GOES_HERE && make && make install",
-		"!unboundmake": "./configure --prefix=PREFIX_GOES_HERE && make && make install",
-		"!pdns4make": "./configure && SYSCONFDIR=PREFIX_GOES_HERE/etc/powerdns make -e && DESTDIR=PREFIX_GOES_HERE make -e install",
-		"!knotmake": "meson build_dir --prefix=PREFIX_GOES_HERE --default-library=static && ninja -C build_dir/ install",
+		"!bind9make": "./configure --prefix=PREFIX && make && make install",
+		"!unboundmake": "./configure --prefix=PREFIX && make && make install",
+		"!pdns4make": "./configure && SYSCONFDIR=PREFIX/etc/powerdns make -e && DESTDIR=PREFIX make -e install",
+		"!knotmake": "meson build_dir --prefix=PREFIX --default-library=static && ninja -C build_dir/ install",
 
-		"!bind9start": "PREFIX_GOES_HERE/sbin/named -c TEST_DIR/named.conf",
-		"!unboundstart": "PREFIX_GOES_HERE/sbin/unbound -c TEST_DIR/unbound.conf",
-		"!pdns4start": [ "cp TEST_DIR PREFIX_GOES_HERE/usr/local/etc/recursor.conf",
-			"PREFIX_GOES_HERE/usr/local/sbin/pdns_recursor --daemon --config-dir=PREFIX_GOES_HERE/usr/local/etc"
+		"!bind9start": "PREFIX/sbin/named -c TEST_DIR/named.conf",
+		"!unboundstart": "PREFIX/sbin/unbound -c TEST_DIR/unbound.conf",
+		"!pdns4start": [ "cp TEST_DIR PREFIX/usr/local/etc/recursor.conf",
+			"PREFIX/usr/local/sbin/pdns_recursor --daemon --config-dir=PREFIX/usr/local/etc"
 			],
-		"!knotstart": "nohup PREFIX_GOES_HERE/sbin/kresd -f 1 -c TEST_DIR/kresd.conf &"
 	}
 	
+	"hold for later": {
+
+		"knot-resolver-4.0.0":
+			{ "url": "https://secure.nic.cz/files/knot-resolver/knot-resolver-4.0.0.tar.xz", "make_str": "!knotmake", "start": "!knotstart" },
+		"!knotstart": "sleep 4; rm -rf PREFIX/workdir; mkdir PREFIX/workdir; dtach -n /tmp/tmpsocket PREFIX/sbin/kresd -f 1 -c TEST_DIR/kresd.conf PREFIX/workdir"
+	
+	}
 }
